--- a/src/styles/scss/components/landingpage.scss
+++ b/src/styles/scss/components/landingpage.scss
@@ -154,7 +154,7 @@
 
 .whats-new {
     background-color: white;
-    padding: 10rem 40rem;
+    padding: 20rem 40rem;
 
 
     &__header {
@@ -162,6 +162,7 @@
         font-size: 4.2rem;
         font-family: 'Carme', sans-serif;
         text-transform: uppercase;
+        line-height: 1.2;
     }
 
     &__left {
